# archived_gnome-doc-utils

./: Makefile.am  bootstrap.make  configure.in  gnome-doc-utils.doap
data/: Makefile.am
doc/gnome-doc-make/: Makefile.am
doc/xslt/: Makefile.am  xsldoc-check.xsl  xsldoc-fill.xsl  xsldoc.awk
po/: LINGUAS  as.po  be.po  bs.po  et.po  gd.po  hi.po  hr.po  km.po  kn.po  ml.po  mr.po  nb.po  sk.po
tools/: gnome-doc-prepare.in  gnome-doc-tool.in  gnome-doc-utils.make
xml2po/: Makefile.am
xslt/common/: theme.xsl  utils.xsl
xslt/docbook/common/: db-chunk.xsl  db-common.xsl  db-label.xsl  db-title.xsl  db-xref.xsl
xslt/docbook/html/: db2html-autotoc.xsl  db2html-bibliography.xsl  db2html-block.xsl  db2html-callout.xsl  db2html-classsynopsis.xsl  db2html-cmdsynopsis.xsl  db2html-css.xsl  db2html-division.xsl  db2html-ebnf.xsl  db2html-footnote.xsl  db2html-funcsynopsis.xsl  db2html-index.xsl  db2html-info.xsl  db2html-inline.xsl  db2html-l10n.xsl  db2html-list.xsl  db2html-media.xsl  db2html-qanda.xsl  db2html-refentry.xsl  db2html-suppressed.xsl  db2html-table.xsl  db2html-title.xsl  db2html-xref.xsl  db2html.xsl  db2xhtml.xsl
xslt/docbook/omf/: db2omf.xsl
xslt/docbook/utils/: chunks.xsl  credits.xsl  figures.xsl  graphics.xsl  ids.xsl
xslt/gettext/: Makefile.am  gettext.xsl  l10n-numbers.xsl
xslt/mallard/cache/: mal-cache.xsl
xslt/mallard/common/: mal-chunk.xsl  mal-link.xsl
xslt/mallard/html/: mal2html-block.xsl  mal2html-css.xsl  mal2html-inline.xsl  mal2html-list.xsl  mal2html-media.xsl  mal2html-page.xsl  mal2html-table.xsl  mal2html.xsl  (+1 more)
